Fix z-index for fixed header positioning

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -16,6 +16,7 @@
       position: fixed;
       inset-block-start: 0;
       inset-inline: 0;
+      z-index: 99;
     }
   }
 
